--- a/views/cart.pug
+++ b/views/cart.pug
@@ -6,6 +6,7 @@ block content
             thead
                 th Name
                 th Price
+                th Quantity
                 th Description
                 th Status
                 th Action
@@ -17,6 +18,7 @@ block content
                     tr
                         td=item.Name
                         td=item.Price
+                        td=item.quantity
                         td=item.Description
                         td=item.Status
                         td
