--- a/views/products/add.pug
+++ b/views/products/add.pug
@@ -8,7 +8,7 @@ block content
                 input#name(type="text",class="form-control",name="Name")
         .form-group
                 label(for="Price") Products Price
-                input#price(type="text",class="form-control",name="Price")
+                input#price(type="Number",class="form-control",name="Price")
         .form-group
                 label(for="Description") image url
                 input#price(type="text",class="form-control",name="image")
